src/objects/QPMS__Service_Provider__c.object
<CustomObject>
    <description>This object stores service provider information.</description>
    <fields>
        <fullName>QPMS__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Facility value</description>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Providers</relationshipLabel>
        <relationshipName>Service_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Complaint  value</description>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>Service Providers</relationshipLabel>
        <relationshipName>Service_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Contact value</description>
        <label>Service</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Providers</relationshipLabel>
        <relationshipName>Service_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__FirstName__c</fullName>
        <description>This field is used to save FirstName value</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__LastName__c</fullName>
        <description>This field is used to save LastName value</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__MailingCity__c</fullName>
        <description>This field is used to save City value</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__MailingCountry__c</fullName>
        <description>This field is used to save Country value</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__MailingPostalCode__c</fullName>
        <description>This field is used to save Zip Code value</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__MailingStreet__c</fullName>
        <description>This field is used to save Address value</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__MiddleName__c</fullName>
        <description>This field is used to save Middle Initial value</description>
        <label>Middle Initial</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone__c</fullName>
        <description>This field is used to save Phone value</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Speciality__c</fullName>
        <description>This field is used to save Speciality value</description>
        <label>specialty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SPL1</fullName>
                </value>
                <value>
                    <fullName>SPL2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This field is used to save Type value</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
                <value>
                    <fullName>Type2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Provider</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Service Provider Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>